dist_man1_MANS=

if BUILD_BITCOIND
  dist_man1_MANS+=zencoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=zencoin-qt.1
endif

if BUILD_BITCOIN_CLI
  dist_man1_MANS+=zencoin-cli.1
endif

if BUILD_BITCOIN_TX
  dist_man1_MANS+=zencoin-tx.1
endif

if ENABLE_WALLET
if BUILD_BITCOIN_WALLET
  dist_man1_MANS+=zencoin-wallet.1
endif
endif
